<resources>
    <string name="app_name">PeerDeviceNet(Core)</string>
    <string name="device_name">Device name</string>
    <string name="device_addr">IP address</string>
    <string name="device_port">Service port</string>
    <string name="wifi_name">Wi-Fi</string>
    <string name="turnon_wifi">Turn on Wi-Fi</string>
    <string name="wifi_no_conn">Wi-Fi not connected</string>
    <string name="disable_mobile_data">Please use Wi-Fi if available</string>
    <string name="turnon">Turning on...</string>
    <string name="turnoff">Turning off...</string>
    <string name="wifi_direct_name">Wi-Fi direct</string>
    <string name="wifi_hotspot_name">Wi-Fi hotspot</string>
    <string name="config_nets">Network configuration</string>
    <string name="config_new_nets">Setup new networks</string>
    <string name="check_setting">More details at system settings</string>
    <string name="rmt_intent">Remote intent</string>
    <string name="permdesc_rmt_intent">Allow other applications to send remote intents to peer devices</string>
    <string name="rmt_msg">Remote communication</string>
    <string name="permdesc_rmt_msg">Allow other applications to send remote messages to peer devices</string>
    <string name="conns">Connections</string>
    <string name="conn_setup">Setup peer device connections</string>
    <string name="actions">Actions</string>
    <string name="settings">Settings</string>
    <string name="conn_actions">Connection actions</string>
    <string name="conn_settings">Connection settings</string>
    <string name="more_set_actions">More settings and actions</string>
    <string name="detail_params">Detailed parameters</string>
    <string name="cleanup_shutdown">Tests, cleanup and shutdown</string>
    <string name="tests">Connection tests</string>
    <string name="rot_cube">Rotate color cube with peers</string>
    <string name="paint">Paint with peers</string>
    <string name="conn_confirm">Choose devices to allow connection</string>
    <string name="pin_entry">Please enter PIN to connect to peers</string>
    <string name="conn_devices">Connected peer devices</string>
    <string name="find_devices">Find and connect peer devices</string>
    <string name="add_peer">Connect peer device</string>
    <string name="scan_nearby">Search and connect peers</string>
    <string name="manual_add">Manually connect peer</string>
    <string name="gen_settings">Settings</string>
    <string name="seconds">seconds</string>
    <string name="sessions">sessions</string>
    <string name="conn_pin">Connection PIN required</string>
    <string name="summary_conn_pin">Peers are required to enter same PIN to connect</string>
    <string name="auto_scan">Automatic search peers</string>
    <string name="summary_auto_scan">Automatically search for peer devices at start</string>
    <string name="auto_conn">Automatic connection setup</string>
    <string name="summary_auto_conn">Automatically connect to devices found during search</string>
    <string name="auto_accept">Automatic connection acceptance</string>
    <string name="summary_auto_accept">Automatically accept connections from devices found during search</string>
    <string name="use_ssl">Encrypt device connnections for security</string>
    <string name="summary_use_ssl">Unencrypt for better connectivity and faster transfer</string>
    <string name="search_timeout">Device search timeout</string>
    <string name="live_timeout">Peer liveness checking timeout</string>
    <string name="conn_timeout">Device connect timeout</string>
    <string name="max_sessions">Max concurrent transfers</string>
    <string name="wifidir_hotspot">Wi-Fi Direct Hotspot</string>
    <string name="summary_wifidir_hotspot">Create Wi-Fi Direct group/hotspot for connecting legacy Wi-Fi devices</string>
    <string name="title_wifidir_hotspot">Create Wi-Fi Direct Hotspot</string>
    <string name="wifidir_warning_title">Wi-Fi Direct Not Enabled</string>
    <string name="wifidir_warning">Wi-Fi Direct interface has to be enabled to create a Wi-Fi Direct group or hotspot. Tap "OK" to go to system settings to enable Wi-Fi Direct.</string>
    <string name="netname">Network name</string>
    <string name="passphrase">Passphrase</string>
    <string name="choose_peers">Peer devices</string>
    <string name="send_int_header">Send to peer devices</string>
    <string name="add_peer2">Add peers</string>
    <string name="purchase_app">Upgrade</string>
    <string name="choose_peer_label">Choose peer device to send data</string>
    <string name="purchase_label">The chosen data size exceed the capacity of this free app. You can either upgrade to the full version app or cancel session</string>
    <string name="add_peer_label">Click \"Add peers\" button to connect peer devices</string>
    <string name="miss_target_label">Intent target device is not connected. Click \"Add peers\" button to connect or choose a different device</string>
    <string name="send_progress_label">Send data to peers</string>
    <string name="recv_progress_label">Receive data from peers</string>
    <string name="recv_int_header">Receive from peer devices</string>
    <string name="transfer_accept_label">Choose remote sessions to accept</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nospace_warning">Please cancel some sessions due to storage constraint. </string>
    <string name="freespace">The available space: </string>
    <string name="takenspace">current chosen sessions will need space: </string>
    <string name="types">types</string>
    <string name="files">files</string>
    <string name="size">size</string>
    <string name="install_from_market">App store install request</string>
    <string name="miss_app">There is no application to handle intent  </string>
    <string name="install_pkg">Do you want to install package from App store? If yes, your data will be saved as a notification which you can display after installing app</string>
    <string name="rmt_intent_fail">Fail to start remote intent</string>
    <string name="rmt_intent_sec_err">PeerDeviceNet does not have the permissions to directly perform your intent. Please use another activity to do it on your behalf""</string>
    <string name="rmt_intent_err">Exception during firing remote intent</string>
    <string name="send">Send</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="reject">Reject</string>
    <string name="reject_all">Reject all</string>
    <string name="license_agreement">License agreement for PeerDeviceNet</string>
    <string name="intro_title">Introduction</string>
    <string name="unknown">Unknown</string>
    <string name="peers">Peers</string>
    <string name="router_notif_ticker">PeerDeviceNet service starts</string>
    <string name="router_notif_title">PeerDeviceNet service</string>
    <string name="router_notif_message">Touch to connect peer devices</string>
    <string name="rmtint_progress">Remote session progress</string>
    <string name="rmtint_start_notif_ticker">Receive data from</string>
    <string name="rmtint_start_notif_title">Receive data from</string>
    <string name="rmtint_start_notif_message">Touch to view details</string>
    <string name="rmtint_start_notif_prog_message"> completed; touch to view details</string>
    <string name="rmtint_sent_notif_ticker">Send data to</string>
    <string name="rmtint_sent_notif_title">Send data to</string>
    <string name="rmtint_sent_notif_message">Touch to view details</string>
    <string name="rmtint_sent_notif_prog_message"> completed; touch to view details</string>
    <string name="lose_wifi_notif_ticker">Wi-Fi connection is lost</string>
    <string name="lose_wifi_notif_title">Wi-Fi connection is lost</string>
    <string name="lose_wifi_notif_message">Touch to view more details</string>
    <string name="lose_wifi_message">Pending data transfers may be cancelled and peers disconnected</string>
    <string name="peer_reject_title">Connection denied by peer</string>
    <string name="peer_reject_postfix">Connection denied to </string>
    <string name="peer_reject_connmgr_inactive">Peer Connection Manager is not active at top</string>
    <string name="peer_reject_pin_mismatch">PIN mismatch</string>
    <string name="peer_reject_by_user">Peer reject it explicitly</string>
    <string name="peer_ssl_diff_title">Inconsistent connection encryption</string>
    <string name="peer_ssl_diff_msg">You cannot connect to the following peer. Your connection encryption setting is different: </string>
    <string name="cant_connect_self">Device can not connect to self</string>
    <string name="shutdown_title">Shutdown</string>
    <string name="shutdown_detail">Touch to shut down PeerDeviceNet services</string>
    <string name="cleanup_title">Cleanup</string>
    <string name="cleanup_detail">Cancel all current data transfers</string>
    <string name="license">License</string>
    <string name="thanks_title">Special Thanks</string>
    <string name="thanks">Special thanks</string>
    <string name="tutorial">Tutorial</string>
    <string name="license_tutorial">License and tutorial</string>
	<string name="title_activity_ctor">PeerConnector</string>
    <string name="use_qrconn">Connect by using NFC/Beam or camera scanning QR code</string>
    <string name="use_autoconn">Connect by network search</string>
    <string name="leader_label">Leader</string>
    <string name="leader_info">As leader, you will choose and setup network; generate QR code picture and start NFC transmit</string>
    <string name="member_label">Member</string>
    <string name="member_info">As a member, you will either use rear or front camera to scan leader\'s QR code or tap your device with leader to connect to leader and other peers</string>
    <string name="autofind_label">Auto search and connect</string>
    <string name="autofind_info">Auto search peers by network multicast, which could fail since some public WiFi block it</string>
    <string name="qrcode_label">QR code image</string>
    <string name="keep_qrcode">Please keep QR code image visible until all peer devices connect</string>
    <string name="ntypes_label">Choose network, create QR code and start NFC transmit</string>
    <string name="use_nfc_label">Enable NFC / Android Beam to send connection info</string>
    <string name="use_ssl_label">Encrypt device connnections for security</string>
    <string name="use_ssl_info">Encrypted connections are safer in public WiFi. Unencrypted connections provide better connectivity and faster transfer</string>
    <string name="wifi_label">Wi-Fi</string>
    <string name="wifi_info">Use external Wi-Fi router for connection, which could fail since some public Wi-Fi blocks device-device connection. Click to configure</string>
    <string name="wifi_direct_label">Wi-Fi Direct</string>
    <string name="wifi_direct_info">Create Wi-Fi Direct hotspot to connect peers. Don\'t need external Wi-Fi. Click to configure</string>
    <string name="wifi_hotspot_label">Mobile hotspot</string>
    <string name="wifi_hotspot_info">Use device\'s mobile hotspot to connect peers. Don\'t need external Wi-Fi. Click to configure</string>
    <string name="wifi_conn_fail_title">Wifi Connection Failed</string>
	<string name="wifi_conn_fail_msg1">Failed to connect to </string>
	<string name="wifi_conn_fail_msg2"> . Please set up WiFi connection manually.</string>
	<string name="connector">Connect by NFC/Beam or Camera/QRCode</string>
	<string name="conn_prog_msg">Configure and connect to WiFi network</string>
	<string name="done">Done</string>
	<string name="enter">Enter</string>
    <string name="passwd_entry_info">Enter password so peers can scan and connect to your Wi-Fi</string>
    <string name="passwd_hint">Wi-Fi password</string>
</resources>