<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
 * Copyright (C) 2013 Yigong Liu, XCONNS, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
  -->
<preference-headers
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/conn_settings" >

    <header android:fragment="com.xconns.peerdevicenet.cm.ConnectionsPreferenceFragment"
            android:title="@string/conns"
            android:summary="@string/conn_setup" />

    <header android:fragment="com.xconns.peerdevicenet.cm.ConnectionSettingsPreferenceFragment"
            android:title="@string/conn_settings"
            android:summary="@string/detail_params">
    </header>

    <header android:fragment="com.xconns.peerdevicenet.cm.ActionsPreferenceFragment"
            android:title="@string/cleanup_shutdown">
    </header>

</preference-headers>